feat: add the order documentation
